examples/test3.c
int x;
int boo(int kkk) {
    int t;
    t =3;
    x = t;
    int y;
    y = 2;
    int z; int w;
    y = 3;
    z = 4;
    w = kkk;
    if (1 == 2) {
        y = w;
        return 33;
    }
    else {
        x = 5;
    }
    x = 4;

    int dead;
    int ret;
    ret = dead;

    return ret;
}

// int factorial(int n)
// {
// 	if (n <= 0)
// 		return 1;
// 	else return n*factorial(n-1);
// }

// int x;

// int cat(int z) {
//   int y;
//   x += 1;
//   z + 1;
//   return x;
// }

// int*** bb(int z, ...);

// void foo() {
//     int y;
//     y = 2;
//     y--;
//     // cat(2)++;
//     int** z;
//     cat(y);
//     int*** a = bb(1, 2, 3);
// }

// // void foo() {
// //     int x;
// //     x = cat()--; // error: expression must be modifiable lvalue
// // }
